syntax = "proto3";
package microtick.v1beta1.msg;

import "gogoproto/gogo.proto";

option go_package = "gitlab.com/microtick/mtzone/x/microtick/msg";

message QueryParamsRequest {}

message QueryParamsResponse {

  bool european_options = 1 [
    (gogoproto.jsontag) = "european_options"
  ];
  
  string commission_quote_percent = 2 [
    (gogoproto.jsontag) = "commission_quote_percent"
  ];  
  
  string commission_trade_fixed = 3 [
    (gogoproto.jsontag) = "commission_trade_fixed"
  ];  
  
  string commission_update_percent = 4 [
    (gogoproto.jsontag) = "commission_update_percent"
  ];  
  
  string commission_settle_fixed = 5 [
    (gogoproto.jsontag) = "commission_settle_fixed"
  ];  
  
  string commission_cancel_percent = 6 [
    (gogoproto.jsontag) = "commission_cancel_percent"
  ];  
  
  string settle_incentive = 7 [
    (gogoproto.jsontag) = "settle_incentive"
  ];  
  
  int32 freeze_time = 8 [
    (gogoproto.jsontag) = "freeze_time"
  ];
  
  string halt_time = 9 [
    (gogoproto.jsontag) = "halt_time"
  ];
  
  string mint_denom = 10 [
    (gogoproto.jsontag) = "mint_denom"
  ];
  
  string mint_ratio = 11 [
    (gogoproto.jsontag) = "mint_ratio"
  ];  
  
  string cancel_slash_rate = 12 [
    (gogoproto.jsontag) = "cancel_slash_rate"
  ]; 
  
  string backing_denom = 13 [
    (gogoproto.jsontag) = "backing_denom"
  ];
  
  uint32 backing_ratio = 14 [
    (gogoproto.jsontag) = "backing_ratio"
  ];
  
}

